# cells_VKR_2022

./: .gitignore  README.md  main.py  pyproject.toml  schemas.py  settings.py
detector/: detect.py
templates/: main.html
