[tool.poetry]
name = "cells"
version = "0.1.0"
description = ""
authors = ["Alexander Ananyevskiy <a.ananyevsky@agima.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
torch = "^1.11.0"
torchvision = "^0.12.0"
yolov5 = "^6.1.2"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
